Lage en nettside basert på figma
Vi legg til forskjellig seksjoner artikler og skjema

--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -20,9 +20,90 @@
 
     <section>
       <h2>Crazy gaming deals</h2>
-      <img src="https://picsum.photos/id/237/200/300" alt="En søt hund">
+      <img src="https://picsum.photos/200/300?grayscale" alt="En søt hund">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+      <a href="offers.html">Se tilbud</a>
     </section>
-  </body>
 
+    <main>
+      <section>
+        <h2>Populære Spæll</h2>
+
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="">Legg i handlevogn</a>
+        </article>
+        
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="">Legg i handlevogn</a>
+        </article>
+
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="">Legg i handlevogn</a>
+        </article>
+
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="">Legg i handlevogn</a>
+        </article>
+
+      </section>  
+
+      <section>
+        <h2>Kategorier</h2>
+        
+        <article>
+          <h3><a href="action.html">Action</a></h3>
+        </article>
+
+        <article>
+          <h3><a href="nintendo.html">Nintendo</a></h3>
+        </article>
+
+        <article>
+          <h3><a href="rollespill.html">Rollespill</a></h3>
+        </article>
+
+        <article>
+          <h3><a href="fantasy.html">Fantasy</a></h3>
+        </article>
+
+      </section>
+
+    </main>
+
+    <aside>
+      <h4>Meld deg inn i spællklubben</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur</p>
+
+
+      <form>
+        <label>
+          E-post:
+          <input type="email" placeholder="ola.nordman@hiof.no...">
+        </label>
+
+        <input type="submit" value="Mel meg på">
+
+        <label for="age-validation">Over 18</label>
+        <input type="checkbox" id="age-validation">
+      </form>
+
+    </aside>
+
+  </body>
 </html>
