--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Hjem</a></li>
-          <li><a href="products.html">Produkter</a></li>
+          <li><a href="product.html">Produkter</a></li>
         </ul>
       </nav>
     </header>
@@ -100,10 +100,12 @@
         <input type="submit" value="Mel meg på">
 
         <label for="age-validation">Over 18</label>
-        <input type="checkbox" id="age-validation">
+        <input type="checkbox" id="age-validation" required>
       </form>
 
     </aside>
+
+
 
   </body>
 </html>
