--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Hjem</a></li>
-          <li><a href="product.html">Produkter</a></li>
+          <li><a href="products.html">Produkter</a></li>
         </ul>
       </nav>
     </header>
