--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -34,7 +34,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="">Legg i handlevogn</a>
+          <a href="product.html">Se produkt</a>
         </article>
         
         <article>
@@ -42,7 +42,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="">Legg i handlevogn</a>
+          <a href="product.html">Se produkt</a>
         </article>
 
         <article>
@@ -50,7 +50,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="">Legg i handlevogn</a>
+          <a href="product.html">Se produkt</a>
         </article>
 
         <article>
@@ -58,7 +58,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="">Legg i handlevogn</a>
+          <a href="product.html">Se produkt</a>
         </article>
 
       </section>  
