--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>Forside - DataSpæll</title>
   </head>
 
   <body>
 
     <header>
-      <a href="index.html">LOGO</a>
+      <a href="index.html" id="mainlogo">LOGO</a>
       <nav>
         <ul>
           <li><a href="index.html">Hjem</a></li>
@@ -34,7 +35,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="product.html">Se produkt</a>
+          <a href="product.html" class="btn">Se produkt</a>
         </article>
         
         <article>
@@ -42,7 +43,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="product.html">Se produkt</a>
+          <a href="product.html" class="btn">Se produkt</a>
         </article>
 
         <article>
@@ -50,7 +51,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="product.html">Se produkt</a>
+          <a href="product.html" class="btn">Se produkt</a>
         </article>
 
         <article>
@@ -58,7 +59,7 @@
           <h3>Red dead Redemption</h3> 
           <p>Lorem ipsum dolor sit amet, consectetur</p>
           <p>kr 499</p>
-          <a href="product.html">Se produkt</a>
+          <a href="product.html" class="btn">Se produkt</a>
         </article>
 
       </section>  
