--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <header>
+    <header id="global-header">
       <a href="index.html" id="mainlogo">LOGO</a>
       <nav>
         <ul>
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <section>
+    <section class="deal-section">
       <h2>Crazy gaming deals</h2>
       <img src="https://picsum.photos/200/300?grayscale" alt="En søt hund">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
@@ -98,7 +98,7 @@
           <input type="email" placeholder="ola.nordman@hiof.no...">
         </label>
 
-        <input type="submit" value="Mel meg på">
+        <input class="btn" type="submit" value="Mel meg på">
 
         <label for="age-validation">Over 18</label>
         <input type="checkbox" id="age-validation" required>
