--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -21,9 +21,9 @@
 
     <section class="deal-section">
       <h2>Crazy gaming deals</h2>
-      <img src="https://picsum.photos/200/300?grayscale" alt="En søt hund">
+      <!-- <img src="https://picsum.photos/700/500?grayscale" alt="En søt hund"> -->
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
-      <a href="offers.html">Se tilbud</a>
+      <a href="offers.html" class="btn">Se tilbud</a>
     </section>
 
     <main>
@@ -87,7 +87,7 @@
 
     </main>
 
-    <aside>
+    <aside class="side-container">
       <h4>Meld deg inn i spællklubben</h4>
       <p>Lorem ipsum dolor sit amet, consectetur</p>
 
@@ -100,13 +100,14 @@
 
         <input class="btn" type="submit" value="Mel meg på">
 
-        <label for="age-validation">Over 18</label>
-        <input type="checkbox" id="age-validation" required>
+        <label class="age-check" for="age-validation">Over 18   
+          <input type="checkbox" id="age-validation" required>
+        </label>
       </form>
 
     </aside>
 
-
+    <footer>Webutvikling 2025</footer>
 
   </body>
 </html>
