--- a/Grunnlegende-HTML/product.html
+++ b/Grunnlegende-HTML/product.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset = "UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
         <title>Red Dead Redemption 2</title>
 
         <style>
@@ -21,19 +22,19 @@
     </head>
 
     <body>
-        <header>
-        <a href="index.html">LOGO</a>
-        <nav>
-            <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="products.html">Produkter</a></li>
-            </ul>
-        </nav>
+        <header id="global-header">
+            <a href="index.html" id="mainlogo">LOGO</a>
+            <nav>
+                <ul>
+                <li><a href="index.html">Hjem</a></li>
+                <li><a href="products.html">Produkter</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
             <h1>Red Dead Redemption</h1>
-            <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1174180/header.jpg?t=1720558643" alt="Red Dead Redemption">
+            <img src="img/red_dead.jpg" alt="Red Dead Redemption">
 
             <table>
                 <tr>
@@ -66,5 +67,7 @@
                 </tr>
             </table>
         </main>
+
+        <footer>Webutvikling 2025</footer>
     </body>
 </html>
