--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div id="page-container">
 
     <header id="global-header">
       <a href="index.html" id="mainlogo">LOGO</a>
@@ -108,6 +109,7 @@
     </aside>
 
     <footer>Webutvikling 2025</footer>
+    </div>
 
   </body>
 </html>
