--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <main>
-      <section>
+      <section class="flex-container flex-grow">
         <h2>Populære Spæll</h2>
 
         <article>
@@ -65,10 +65,10 @@
 
       </section>  
 
-      <section>
+      <section class="flex-container flex-grow"> <!--lagger to ulike klaser-->
         <h2>Kategorier</h2>
         
-        <article>
+        <article class="grow-1">
           <h3><a href="action.html">Action</a></h3>
         </article>
 
@@ -80,7 +80,7 @@
           <h3><a href="rollespill.html">Rollespill</a></h3>
         </article>
 
-        <article>
+        <article class="grow-2">
           <h3><a href="fantasy.html">Fantasy</a></h3>
         </article>
 
