--- a/Grunnlegende-HTML/index.html
+++ b/Grunnlegende-HTML/index.html
@@ -63,6 +63,38 @@
           <a href="product.html" class="btn">Se produkt</a>
         </article>
 
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
+        <article>
+          <img src="https://picsum.photos/200/300?grayscale" alt="Red dead redemition">
+          <h3>Red dead Redemption</h3> 
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
+          <p>kr 499</p>
+          <a href="product.html" class="btn">Se produkt</a>
+        </article>
+
       </section>  
 
       <section class="flex-container flex-grow"> <!--lagger to ulike klaser-->
