--- a/labovelser/labovelse4_ccs3/ovelser.html
+++ b/labovelser/labovelse4_ccs3/ovelser.html
@@ -67,8 +67,8 @@
 
 
     <footer id="footer">
-        <h3>Kontakt person: Nikola | nikolamp@hiof.no</h3>
-        <h3>Lurer du på noe? Gjerne kontakt oss</h3>
+        <p>Kontakt person: Nikola | nikolamp@hiof.no</p>
+        <p>Lurer du på noe? Gjerne kontakt oss</p>
         <form>
             <label>
                 Ditt navn:
