--- a/labovelser/labovelse3_html5_uke37/index.html
+++ b/labovelser/labovelse3_html5_uke37/index.html
@@ -53,8 +53,8 @@
 
 
     <footer id="footer">
-        <h3>Kontakt person: Nikola | nikolamp@hiof.no</h3>
-        <h3>Lurer du på noe? Gjerne kontakt oss</h3>
+        <p>Kontakt person: Nikola | nikolamp@hiof.no</p>
+        <p>Lurer du på noe? Gjerne kontakt oss</p>
         <form>
             <label>
                 Ditt navn:
