Rensponsitivt nettside - forelesning

--- a/Responsivt-grid/index.html
+++ b/Responsivt-grid/index.html
@@ -23,6 +23,20 @@
             </header>
             <main>
                 <h1>Main</h1>
+                <section> <!--section må ikke ha overskrift-->
+                    <h2>Nyeste bilder</h2>
+                    <article>
+                        <h3>Grief</h3>
+                        <picture> <!--en <img>-tagg inn i en <picture>-tagg-->
+                            <source media="(min-width: 1400px)" srcset="img/grief1920.jpg">
+                            <source media="(min-width: 900px)" srcset="img/grief1280.jpg">
+                            <img src="img/grief640.jpg" alt="Bilde av man som holder roser">
+                        </picture>
+                    </article>
+                    <article>
+                        <h3>Man</h3>
+                    </article>
+                </section>
             </main>
             <aside>
                 <h3>Aside</h3>
